syntax = "proto3";

package devjournal.v1;

option go_package = "devjournal/proto/devjournal/v1;devjournalv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// SnippetService provides CRUD operations for code snippets
service SnippetService {
  // CreateSnippet creates a new code snippet
  rpc CreateSnippet(CreateSnippetRequest) returns (Snippet);

  // GetSnippet retrieves a single snippet by ID
  rpc GetSnippet(GetSnippetRequest) returns (Snippet);

  // ListSnippets retrieves a paginated list of snippets
  rpc ListSnippets(ListSnippetsRequest) returns (ListSnippetsResponse);

  // UpdateSnippet updates an existing snippet
  rpc UpdateSnippet(UpdateSnippetRequest) returns (Snippet);

  // DeleteSnippet removes a snippet
  rpc DeleteSnippet(DeleteSnippetRequest) returns (DeleteSnippetResponse);

  // SearchSnippets performs full-text search on snippets
  rpc SearchSnippets(SearchSnippetsRequest) returns (ListSnippetsResponse);

  // GetLanguageStats returns snippet counts grouped by language
  rpc GetLanguageStats(GetLanguageStatsRequest) returns (GetLanguageStatsResponse);
}

// Snippet represents a code snippet stored in MongoDB
message Snippet {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  string code = 5;
  string language = 6; // typescript, go, python, etc.
  repeated string tags = 7;
  google.protobuf.Struct metadata = 8; // Flexible metadata fields
  bool is_public = 9;
  int32 views_count = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// CreateSnippetRequest is the request to create a new snippet
message CreateSnippetRequest {
  string title = 1;
  string description = 2;
  string code = 3;
  string language = 4;
  repeated string tags = 5;
  google.protobuf.Struct metadata = 6;
  bool is_public = 7;
}

// GetSnippetRequest is the request to retrieve a snippet
message GetSnippetRequest {
  string id = 1;
}

// ListSnippetsRequest is the request to list snippets with pagination
message ListSnippetsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string language = 3; // Optional filter by language
  repeated string tags = 4; // Optional filter by tags
}

// ListSnippetsResponse is the response containing a list of snippets
message ListSnippetsResponse {
  repeated Snippet snippets = 1;
  int64 total_count = 2;
}

// UpdateSnippetRequest is the request to update a snippet
message UpdateSnippetRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string code = 4;
  string language = 5;
  repeated string tags = 6;
  google.protobuf.Struct metadata = 7;
  bool is_public = 8;
}

// DeleteSnippetRequest is the request to delete a snippet
message DeleteSnippetRequest {
  string id = 1;
}

// DeleteSnippetResponse is the response after deleting a snippet
message DeleteSnippetResponse {
  bool success = 1;
}

// SearchSnippetsRequest is the request to search snippets
message SearchSnippetsRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// GetLanguageStatsRequest is the request to get language statistics
message GetLanguageStatsRequest {}

// GetLanguageStatsResponse contains snippet counts by language
message GetLanguageStatsResponse {
  map<string, int64> language_counts = 1;
}
